--- a/src/css/shiny-tile.css
+++ b/src/css/shiny-tile.css
@@ -10,6 +10,12 @@
 .shiny-tile {
     position: relative;
     overflow: hidden;
+    border: 1px solid rgba(169, 178, 177, 0.7);
+    margin-bottom: -1px;
+    margin-right: -1px;
+    z-index: 0;
+    padding-left: 15px;
+    padding-right: 15px;
     transition: all 0.4s ease;
 }
 
